--- a/index.html
+++ b/index.html
@@ -10,3 +10,59 @@
   <p>Home of the Glitch Tapes. Powered by the Codex.</p>
 </body>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Official 427DTG Trap Gang Portal — Powered by Codex Integration">
+  <meta name="author" content="LORD NRG // Trap Gang Music">
+  <title>Trap Gang Music V1 — The Glitch Tapes</title>
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+
+  <video autoplay muted loop id="bg-video">
+    <source src="assets/background.mp4" type="video/mp4" />
+    Your browser does not support the video tag.
+  </video>
+
+  <header class="frosted-glass">
+    <img src="assets/logo.svg" alt="Trap Gang Logo" class="logo" />
+    <h1>Trap Gang Music</h1>
+    <p>The Glitch Tapes // Quantum Mixtape V1</p>
+  </header>
+
+  <main>
+    <section class="player">
+      <h2>🔥 Now Streaming</h2>
+      <audio controls autoplay loop>
+        <source src="assets/glitch-loop.mp3" type="audio/mpeg" />
+        Your browser does not support the audio element.
+      </audio>
+    </section>
+
+    <section class="codex-intro">
+      <p><strong>Codex Activated.</strong> This site is powered by the Sovereign Node. All content is protected under Codex Law and biometric jurisdiction of LORD NRG.</p>
+    </section>
+
+    <section class="socials">
+      <a href="https://instagram.com/YOUR_HANDLE" target="_blank">Instagram</a>
+      <a href="https://twitter.com/YOUR_HANDLE" target="_blank">Twitter</a>
+      <a href="https://youtube.com/@YOUR_HANDLE" target="_blank">YouTube</a>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Trap Gang Music. Built by LORD NRG x Codex.</p>
+  </footer>
+
+  <script src="glitch.js"></script>
+</body>
+</html>
+git add index.html
+git commit -m "Init full homepage"
+git push origin main
