--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
   <p>Welcome to the official home of <strong>The Glitch Tapes V1</strong>, built with Codex integration. Quantum-node interface online. Sovereign node activated.</p>
   <p>💽 Listen to the <a href="https://soundcloud.com/your-link" target="_blank">Mixtape</a></p>
   <p>🌐 Follow us: 
-    <a href="https://instagram.com/YOUR_IG" target="_blank">Instagram</a> | 
-    <a href="https://twitter.com/YOUR_TWITTER" target="_blank">Twitter</a> | 
-    <a href="https://youtube.com/YOUR_YOUTUBE" target="_blank">YouTube</a>
+    <a href="https://instagram.com/trapgangmusic" target="_blank">Instagram</a> | 
+    <a href="https://twitter.com/trapgangmusic" target="_blank">Twitter</a> | 
+    <a href="https://youtube.com/trapgangmusic" target="_blank">YouTube</a>
   </p>
 </body>
 </html>
